making sure the site still works

--- a/index.qmd
+++ b/index.qmd
@@ -14,5 +14,6 @@ This is a Quarto website.
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
 ```{r}
+# test
 1 + 1
 ```
