--- a/labs/lab03_SPS509.qmd
+++ b/labs/lab03_SPS509.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Lab 04 - Tidy Data"
+title: "Lab 03 - Tidy Data"
 sidebar: false
 toc: true
 editor: source
@@ -83,7 +83,7 @@ Next, let's calculate some basic descriptive statistics to get a sense of our va
 
 ## Exercise 5
 
-Average population for so many countries over many years isn't super useful to us. How can we come up with a more meaningful average population statistic? Let's break the data down a bit to find something more interesting. Write and run code to calculate the average population **for each year** in the dataset.
+Average population for so many countries over many years isn't super useful to us. How can we come up with a more meaningful average population statistic? Let's break the data down a bit to find something more interesting. Write and run code to calculate the average population **for each year** in the dataset (HINT: You'll need to use.
 
 ```{r}
 
@@ -101,7 +101,7 @@ This is a tough one, so here are a couple of hints: before your ggplot command y
 
 ```
 
-# Exercise 7
+## Exercise 7
 
 Okay, let's explore a couple of relationships in the data. We have data for gdp per capita, population, and life expectancy. Make scatterplots showing the relationship between 1) `pop` and `gdpPercap` and 2) `gdpPercap` and `lifeExp`.
 
@@ -111,7 +111,7 @@ Okay, let's explore a couple of relationships in the data. We have data for gdp 
 
 What do you observe about the relationship between these variables?
 
-# Exercise 8 
+## Exercise 8 
 
 Think of another visualization independently on your own, write the code, run it, and describe what you've done!
 
